Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-09-27 Kimmo
 PATCH: [ 1565917 ] Register.bat to register ShellExt for 64-bit Windows
  ShellExtension: Register.bat

2006-09-26 Tim
 PATCH: [ 1565359 ] Various Updates in German Translation for WinMerge 2.6
  Src/Languages/German: MergeGerman.rc

2006-09-26 Kimmo
 PATCH: [ 1563171 ] Catalan translation update (Open-dialog)
  Submitted by Jordi Vilar
   Src/Languages/Catalan: MergeCatalan.rc

2006-09-24 Gal
 BUG: [ 1564283 ] Parameter -x causes files to be closed after merging
  Src: MergeDoc.cpp

2006-09-24 Kimmo
 PATCH: [ 1564280 ] Stack corruption in LanguageSelect
  Src/Common: LanguageSelect.cpp
 PATCH: [ 1563386 ] Spanish translation update
  Submitted by Jesus M. Delgado 'Mack'
   Src/Languages/Spanish: MergeSpanish.rc

2006-09-23 Kimmo
 Fix Visual C 6 compile by backouting (partly) patches:
  - Fix 64-bit pointer truncation in SetWindowLongPtr call (the last I hope)
  - PATCH: [ 1561796 ] Get/SetWindowLong not supported in 64-bit Windows
  - BUG: [ 1561781 ] 64-bit compile errors from 7zCommon.cpp
  Src: 7zCommon.cpp ChildFrm.cpp
  Src/Common: CSubclass.cpp MessageBoxDialog.cpp MessageBoxDialog.h sizecbar.cpp

2006-09-21 WinMerge experimental release 2.5.7.1 (SVN revision 3600)

2006-09-21 Kimmo
 PATCH: [ 1558213 ] Tweak text positions in splash screen
  Src: Splash.cpp
 Bump ShellExtension version to 1.9.0 (first 64-bit Windows version)
  ShellExtension: ShellExtension.rc
 Fix 64-bit typecast warning
  Src: GhostTextBuffer.h
 Fix 64-bit pointer truncation in SetWindowLongPtr call (the last I hope)
  Src: ChildFrm.cpp
 Minor tweaks to 64-bit ShellExtension project file
  ShellExtension: ShellExtensionX64.vcproj

2006-09-20 Kimmo
 PATCH: [ 1561788 ] Fix 64-bit CFile constructor usage
  Src/Common: UniFile.cpp
 PATCH: [ 1561796 ] Get/SetWindowLong not supported in 64-bit Windows
  Src: 7zCommon.cpp ChildFrm.cpp