@@ -157,7 +157,8 @@ public :
 			m_nRealLinesInDeletedBlock = src.m_nRealLinesInDeletedBlock;
 			SetText(src.GetText());
 			INT_PTR size = src.m_paSavedRevisonNumbers->GetSize();
-			m_paSavedRevisonNumbers = new CDWordArray();
+			if (!m_paSavedRevisonNumbers)
+				m_paSavedRevisonNumbers = new CDWordArray();
 			m_paSavedRevisonNumbers->SetSize(size);
 			INT_PTR i;
 			for (i = 0; i < size; i++)
